--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "react": "^18.2.0",
+    "react-collapsed": "^4.0.4",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "swiper": "^10.3.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
